Sat Feb  7 17:33:39 1998  Ian Lance Taylor  <ian@cygnus.com>

	* getline.h (getstr): Declare.

13 Jan 1998  Jim Kingdon

	* fncase.c: Include config.h before system.h.

	* system.h: Just include string.h unconditionally.  We already
	include it unconditionally elsewhere.

Tue Jan 13 16:51:59 1998  Ian Lance Taylor  <ian@cygnus.com>

	* fncase.c: New file, taken from windows-NT/filesubr.c.
	* system.h: If __CYGWIN32__ or WIN32 are defined, define
	FOLD_FN_CHAR, FILENAMES_CASE_INSENSITIVE, and ISDIRSEP, and
	declare fncmp and fnfold.  Taken from windows-NT/config.h.
	* Makefile.in (SOURCES): Add fncase.c.

Sat Jan 10 10:51:26 1998  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* getline.c (getstr): Make sure to set errno when appropriate.  I
	didn't test the error case for the new code but inspection shows
	the old code was rather broken.

Sat Nov 29 22:03:39 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	getwd and getcwd were a big big mess.  Although Jim's fix might
	indeed be fixing a typo, the code is so tangled that I would guess
	it probably breaks some system.  So clean this up:
	* xgetwd.c: Always assume we have getcwd (we had been anyway,
	before Jim's change).
	* getwd.c: Removed.
	* Makefile.in: Remove getwd.c
	* system.h: Remove declarations of getwd and getcwd.  Move getcwd
	declaration to the !HAVE_UNISTD_H section.

1997-11-29  Jim Meyering  <meyering@na-net.ornl.gov>

	* xgetwd.c: Fix typo s/ifndef/ifdef/ in test of HAVE_GETWD.

Wed Nov 26 10:12:33 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* system.h: Always use "rb" and "wb".  Check for O_BINARY with an
	#ifdef, not the error-prone LINES_CRLF_TERMINATED.

Thu Sep 25 10:57:39 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* getdate.y (get_date): If gmtime returns NULL, try to cope.
	* getdate.c: Regenerated using byacc.

	* getdate.y: Remove comment about sending email concerning this file
	to Rich Salz.
	* getdate.c: Regenerated using byacc.
