@@ -1,3 +1,7 @@
+1998-02-03  Tim Pierce  <twp@skepsis.com>
+
+	* system.h (CVS_LSTAT): New macro.
+
 Sat Feb  7 17:33:39 1998  Ian Lance Taylor  <ian@cygnus.com>
 
 	* getline.h (getstr): Declare.
